--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 python = "^3.10"
 transformers = "^4.27.4"
 torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
+adapter-transformers = "^3.2.0"
+nomic = "^1.1.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+promtroid = "gpt_generate:main"
